Added second header image

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,10 @@
 <header class="site-header">
 
-  <div id ="header-image" >
-    <img src="assets/flavorcrime.jpg" id="mainface"></img>
+  <div class="left-header-image">
+    <img src="/assets/flavorcrime.jpg" class="face"></img>
+  </div>
+  <div class="right-header-image">
+    <img src="/assets/chris.jpeg" class="face"></img>
   </div>
   <div class="wrapper">
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
